--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Сайт города Седоны в Аризоне</title>
     <link rel="stylesheet" href="./css/style.min.css">
-    <link rel="icon" href="favicon.ico"><!-- 32×32 -->
+    <link rel="icon" href="favicon.ico" sizes="any"><!-- 32×32 -->
     <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicons/favicon-180.png"> <!-- 180×180 -->
     <link rel="manifest" href="manifest.webmanifest">
